--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farhan Sakib Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="color">Farhan Sakib</span> World!</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="color">Farhan Sakib</span> World!</h1>
+            <h3>About Me:</h3>
+            <p>I am Farhan Sakib.I have completed my SSC at 2015 and completed my HSC at 2017.Then I have admmited a
+                private
+                university named"Sonargaon University".I have selected CSE subject to complete my graduation.Now I dream
+                to
+                be a Very good Enginner.</p>
+
+        </div>
+        <div class="half-width">
+            <img src="depositphotos_11532735-stock-photo-spectrum-color-circle.png" alt="Farhan sakib">
+        </div>
+    </section>
+
 </body>
+
 </html>
