several styles added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 university named"Sonargaon University".I have selected CSE subject to complete my graduation.Now I dream
                 to
                 be a Very good Enginner.</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/farhan-sakib-645a17207/">Hire Me</a>
 
         </div>
         <div class="half-width">
