image and p addes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
             <img src="depositphotos_11532735-stock-photo-spectrum-color-circle.png" alt="Farhan sakib">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="0710115045(1).png" alt="sakib">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>
+                To become a Web Developer, I have an understanding of HTML, CSS, and JavaScript. I am also learning
+                about CSS and CSS frameworks. Developing these fundamental web development skills will give me the
+                foundation and logic for communicating with programming languages.I am trying for my best.Please keep me
+                in your prayer.
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://drive.google.com/file/d/1iBFEQMoE1kdELD6MSgXVoyCpjJnV661h/view?usp=sharing">Download
+                Resume</a>
+
+        </div>
+
+    </section>
 
 </body>
 
