--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="color">Farhan Sakib</span> World!</h1>
@@ -30,9 +30,9 @@
             <img src="depositphotos_11532735-stock-photo-spectrum-color-circle.png" alt="Farhan sakib">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="0710115045(1).png" alt="sakib">
+            <img src="sakib1.png" alt="sakib">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
@@ -50,6 +50,31 @@
         </div>
 
     </section>
+
+    <section class="experiences-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="web1" class="experiences-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML,CSSS and Javascript.I know everything that needed to make a website perfect
+                    and
+                    efficient.I didn't stop with the web.I beyond most of the popular javascript framework vue js.I even
+                    know the deployment,server and security.I will give 100% web solution</p>
+            </div>
+            <div id="web2" class="experiences-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="color">2019-2021 | Baby Web Developer</h3>
+                <p>I wasn't expert in web development.I did know only HTML and CSS and some basic things of web
+                    development.But I made myself as a remove developer.I tried to make simple clone website and showed
+                    to
+                    others as well as show-off.It was so fun.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>@Farhan Sakib , Programming Hero Community</p>
+    </footer>
 
 </body>
 
